# certbot-dns-nicmanager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
certbot_dns_nicmanager/: __init__.py
certbot_dns_nicmanager/_internal/: __init__.py  dns_nicmanager.py
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
docs/decisions/: ADR-001-dns-01-challenge-only.md  ADR-002-zone-resolution-without-zone-reads.md  ADR-003-basic-auth-username-and-cleanup-by-id.md
examples/: nicmanager.ini
tests/: test_dns_nicmanager.py
